--- a/W1D3/Poker/Gemfile
+++ b/W1D3/Poker/Gemfile
@@ -1,7 +1,5 @@
-# frozen_string_literal: true
-
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
+gem 'rspec', "~> 3.1.0"
+gem 'byebug'
 
-# gem "rails"
